[package]
name = "pdb"
version = "0.1.0"
edition = "2021"
description = "PC Window Controller with ADB-like interface"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

# Windows Graphics Capture for screenshots
win-screenshot = "4"

# Image processing for screenshots
image = "0.25"

# Error handling
thiserror = "2.0"

# Async runtime for network
tokio = { version = "1", features = ["full"] }

# Serialization for network protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "pdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "pdb-client"
path = "src/bin/client.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
